[package]
name = "async-time-mock"
description = "Mockable time for use in async runtimes (only tokio for now)."
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = [
	"Max Bruckner",
	"Thomas Keppler",
]

[dependencies]
tokio = {version = "1", features = ["time", "sync"]}

[dev-dependencies]
tokio = {version = "1", features = ["rt", "macros"]}
