[package]
name = "async-time-mock"
description = "Mockable time for use in async runtimes (only tokio for now)."
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = [
	"Max Bruckner",
	"Thomas Keppler",
]

[dependencies]
async-lock = "2"
event-listener = "2"

[dev-dependencies]
futures-util = "0.3"
tokio = {version = "1", features = ["rt", "macros"]}
