[package]
name = "async-time-mock-core"
description = "Mockable time for use in async runtimes (core package)."
version = "0.1.3"
edition = "2021"
license = "MIT"
authors = [
	"Max Bruckner",
	"Thomas Keppler",
]
rust-version = "1.64"

[dependencies]
async-lock = { version = "3", default-features = false }
event-listener = { version = "5", default-features = false }
pin-project-lite = "0.2"

[dev-dependencies]
futures-lite = { version = "2", default-features = false }
tokio = { version = "1", features = ["rt", "macros"] }
