[package]
name = "async-time-mock-smol"
description = "Mockable time for use in async runtimes (smol compatibility)."
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = [
	"Max Bruckner",
	"Thomas Keppler",
]
rust-version = "1.64"

[dependencies]
async-time-mock-core = {version = "0.0.1", path = "../async-time-mock-core", optional = true}
# in order to minimize the amount of dependencies pulled in, use the `async-io` library for timers, which `smol` just reexports
async-io = "1"
# required for the Stream trait and already a dependency of async-io
futures-core = {version = "0.3", optional = true}

[features]
default = ["stream"]
# Enable mock clock
mock = ["dep:async-time-mock-core"]
stream = ["dep:futures-core"]

[package.metadata.docs.rs]
all-features = true
